# routing-algorithm-for-FPGA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: circuito_simples.net  circuito_simples.place
include/architecture/: types.h
include/netlist/: types.h
include/placement/: types.h
include/routing/: graph_builder.h  router.h  types.h
src/: main.cpp
src/architecture/: parser.cpp  parser.h
src/netlist/: parser.cpp  parser.h
src/placement/: parser.cpp  parser.h
src/routing/: graph_builder.cpp  router.cpp
